Fixed text area stretch when editting note

--- a/noteApp.css
+++ b/noteApp.css
@@ -77,12 +77,12 @@ button:hover {
     font: inherit; 
     color: #000; 
     overflow: hidden; 
-    min-height: 20px; 
+    min-height: 20px;
+    max-height: 20px; 
     line-height: 1.5; 
     font-family: "Arvo", serif;
-    width: 100%;
+    min-width: 320px;
     max-width: 800px;
-    /* height: 80px; */
     margin-right: 10px;
 }
 
@@ -142,7 +142,7 @@ button:hover {
 
 .newNoteArea textarea {
     border-radius: 18px;
-    border-color: #6100FF;
+    border-color: #8F68AE;
     border-width: 4px;
     resize: none; 
     padding: 15px 10px 10px 10px;
@@ -156,7 +156,7 @@ button:hover {
     border-radius: 18px;
     /* min-width: 120px; */
     width: 160px;
-    height: 30px;
+    height: 37px;
     padding-left: 20px;
     padding-right: 20px;
 }
